components/molecules/Navbar/Navbar.module.scss
@import "@styles/vars.scss";

.container {
  width: 100%;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 24px;
  top: 0;
  left: 0;

  .box {
    margin-left: abs((100vw - 1440px) / 2);
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
  }

  @media #{$not-touch} {
    padding-left: 64px;
    padding-right: 64px;
  }
}
.btn {
  height: 40px;
  width: 256px;
  position: relative;
  transition: all 0.3s ease-in;

  @media #{$touch} {
    display: none;
  }

  a {
    position: relative;
    width: 100%;
    height: 100%;
    padding: 0;
    background: none;
    font-size: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #000;
    background-color: #ffca10;
    border-radius: 8px;
    z-index: 1;
    text-decoration: none;

    span {
      top: 2px;
      position: relative;
      line-height: 1;
    }
  }

  &::after {
    content: "";
    position: absolute;
    top: 4px;
    width: 100%;
    height: 100%;
    border-radius: 8px;
    background-color: #d69a00;
    z-index: 0;
    transition: all 0.3ms ease-in-out;
  }

  &:active {
    transform: translateY(8px);
  }
}

